update userGuid.md.
Signed-off-by: ZFCode <zhangfei0210@163.com>